syntax = "proto3";

package campaign.v1;

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/campaign/v1;campaignv1";

import "campaign/v1/requests.proto";

service CampaignService {
  // Create a new campaign metadata record.
  rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);

  // List campaign metadata records.
  rpc ListCampaigns(ListCampaignsRequest) returns (ListCampaignsResponse);

  // Get a campaign metadata record by ID.
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);

  // Create a participant (GM or player) for a campaign.
  rpc CreateParticipant(CreateParticipantRequest) returns (CreateParticipantResponse);

  // List participants for a campaign.
  rpc ListParticipants(ListParticipantsRequest) returns (ListParticipantsResponse);

  // Get a participant by campaign ID and participant ID.
  rpc GetParticipant(GetParticipantRequest) returns (GetParticipantResponse);

  // Create a character (PC/NPC/etc) for a campaign.
  rpc CreateCharacter(CreateCharacterRequest) returns (CreateCharacterResponse);

  // List characters for a campaign.
  rpc ListCharacters(ListCharactersRequest) returns (ListCharactersResponse);

  // Assign a campaign-scoped default controller for a character.
  rpc SetDefaultControl(SetDefaultControlRequest) returns (SetDefaultControlResponse);

  // Get a character sheet (character, profile, and state).
  rpc GetCharacterSheet(GetCharacterSheetRequest) returns (GetCharacterSheetResponse);

  // Patch a character profile (all fields optional).
  rpc PatchCharacterProfile(PatchCharacterProfileRequest) returns (PatchCharacterProfileResponse);

  // Patch a character state (all fields optional).
  rpc PatchCharacterState(PatchCharacterStateRequest) returns (PatchCharacterStateResponse);
}
